tests/ui-msrv/try_transmute_ref-dst-mutable.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/try_transmute_ref-dst-mutable.rs:16:33
   |
16 |     let _: Result<&mut u8, _> = try_transmute_ref!(&0u8);
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/try_transmute_ref-dst-mutable.rs:16:33
   |
16 |     let _: Result<&mut u8, _> = try_transmute_ref!(&0u8);
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 types differ in mutability
   |                                 help: try using a variant of the expected enum: `Err(t.try_transmute_ref())`
   |
   = note: expected enum `Result<&mut u8, _>`
              found enum `Result<&_, ValidityError<&u8, _>>`
   = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
